lib/tests/ui/non_serializable_arguments.stderr
error[E0277]: the trait bound `Number: Serialize` is not satisfied
 --> $DIR/non_serializable_arguments.rs:5:30
  |
5 |     async fn subtract(&self, subtrahend: Number, minuend: Number) -> u64;
  |                              ^^^^^^^^^^ the trait `Serialize` is not implemented for `Number`

error[E0277]: the trait bound `Number: Serialize` is not satisfied
 --> $DIR/non_serializable_arguments.rs:5:50
  |
5 |     async fn subtract(&self, subtrahend: Number, minuend: Number) -> u64;
  |                                                  ^^^^^^^ the trait `Serialize` is not implemented for `Number`
